--- a/settings.env
+++ b/settings.env
@@ -1,8 +1,8 @@
 settings="{
    tokens: {
-      // Main Token (ex: Nz...)
+      // Main Token MTA3NDEzMzM4OTY0MjMyMTk1Mg.G7M3GZ.V-bgtI3kbmUDaluioZRZ7mlHEuuhNFhFOeBuO8
       main: '',
-      // Alt Tokens (ex: Nz...)
+      // Alt Tokens 529781446273925130":"NTI5NzgxNDQ2MjczOTI1MTMw.G_zwDE.T_3z-jYFbzJBJiO9yl7RldQbbjgCBXPpmjV3s0
       alts: [
          '',
       ],
