--- a/settings.env
+++ b/settings.env
@@ -4,9 +4,9 @@ settings="{
       main: '',
       // Alt Tokens 529781446273925130":"NTI5NzgxNDQ2MjczOTI1MTMw.G_zwDE.T_3z-jYFbzJBJiO9yl7RldQbbjgCBXPpmjV3s0
       alts: [
-         '',
-      ],
-   },
+         '529781446273925130":"NTI5NzgxNDQ2MjczOTI1MTMw.G_zwDE.T_3z-jYFbzJBJiO9yl7RldQbbjgCBXPpmjV3s0',
+      529781446273925130":"NTI5NzgxNDQ2MjczOTI1MTMw.G_zwDE.T_3z-jYFbzJBJiO9yl7RldQbbjgCBXPpmjV3s0,
+  529781446273925130":"NTI5NzgxNDQ2MjczOTI1MTMw.G_zwDE.T_3z-jYFbzJBJiO9yl7RldQbbjgCBXPpmjV3s0 
    // The mode to run the sniper in. Options: main (only main account), alts (only alts), both
    mode: 'both',
    /*
